--- a/signal-docker/sentinel/sentinel.conf
+++ b/signal-docker/sentinel/sentinel.conf
@@ -2,7 +2,7 @@ port 26379
 
 dir /tmp
 
-sentinel monitor $SENTINEL_NAME $HOST_IP 6379 $SENTINEL_QUORUM
+sentinel monitor $SENTINEL_NAME 127.0.0.1 6379 $SENTINEL_QUORUM
 
 sentinel down-after-milliseconds $SENTINEL_NAME $SENTINEL_DOWN_AFTER
 
